@@ -20,6 +20,8 @@
 #define __WINE_D3D_H
 
 #include <stdlib.h>
+
+#define COM_NO_WINDOWS_H
 #include <objbase.h>
 #include <d3dtypes.h> /* must precede d3dcaps.h */
 #include <d3dcaps.h>
