@@ -25,6 +25,7 @@
 #include <windows.h>
 #endif /* __WINESRC__ */
 
+#define COM_NO_WINDOWS_H
 #include <objbase.h>
 #include <mmsystem.h>
 #include <dmusici.h>
